# protocol_engine

./: CMakeLists.txt  CMakePresets.json  README.md  helper.cmake
protocol/: PCP_def.md  PCP_def.yml
src/: crc.cpp  crc.h  crc.inl  entry_point.cpp  main.cpp  protocol_engine.cpp  protocol_engine.h
src/buffer/: pwm_command_protocol.cpp  pwm_command_protocol.h
src/util/: argument_parser.cpp  argument_parser.h  argument_parser.inl  core_config.h  crash_handler.cpp  crash_handler.h  macros.h  pch.h  system.cpp  system.h  util.h  util.inl
src/util/data_structure/: UUID.cpp  UUID.h  data_types.h  string_manipulation.cpp  string_manipulation.h  string_manipulation.inl
src/util/io/: logger.cpp  logger.h  serializer_data.h  serializer_yaml.cpp  serializer_yaml.h  serializer_yaml.inl  vfs.cpp  vfs.h
